# lrec26-lexical-consistency-of-trigger-warnings

./: README.md  pyproject.toml
ao3_tags/: __init__.py  prepare_jobs.py
ao3_tags/annotate/: Dockerfile  README.md  abstract.py  create_image.sh  hugging_face_api.py  llm.py  load_passages.py  requirements.txt  slurm_job.sh  utils.py
ao3_tags/conf/: config.yaml  utils.py
ao3_tags/jensen_shannon_div/: README.md  jsd.py  run_jobs.sh  spark_job.sh  term_frequencies.py
ao3_tags/log_ratio/: README.md  log_ratios.py  run_jobs.sh  spark_job.sh
ao3_tags/mannwhitneyu/: README.md  effect_sizes.py  run_jobs.sh  significant_terms.py  spark_job.sh  z_scores.py
ao3_tags/tags/: Dockerfile  README.md  ao3_tag_page.py  create_image.sh  requirements.txt  run_spark.sh  tag_graph.py  tag_graph_postprocessing.py
ao3_tags/utils/: __init__.py  ao3_characters.py  queries.py  tokenization.py  utils.sh  wordlists.py
ao3_tags/visualization/: __init__.py  group_agreement.py  pairwise_agreement.py
ao3_tags/vocabulary/: README.md  gpt4_suggestions.py
resources/annotate/: prompts.csv  sociodemographic_profiles.json
resources/categories/: emotional_abuse_indicators.csv  emotional_abuse_words.csv  physical_abuse_indicators.csv  physical_abuse_words.csv  sexual_abuse_indicators.csv  sexual_abuse_words.csv
resources/query_construction/: warnings_fine_open.csv
resources/tags/: abuse.csv
resources/wordlists/: ao3-characters-automated-stemmed.txt  ao3-characters-automated.txt  ao3-characters.txt  ao3-stopwords.txt
scripts/: run_jobs.sh  run_jobs_array.sh  vocabulary_pipeline.sh
(+19 files in other folders)
